<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PlayActivity">

    <com.example.sudoku.BoardView
        android:id="@+id/sudokuBoard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        custom:backgroundColor="#fff"
        custom:boardColor="@color/boardBorderColor"
        custom:cellFillColor="@color/selectedCellColor"
        custom:cellsHighlightColor="@color/selectedRowColumnColor"
        custom:similarNumberColor="@color/similarNumberColor"
        custom:numberIncorrect="@color/danger"
        custom:numberCorrect="@color/success"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:letterColor="@color/black"
        custom:letterColorSolved="@color/letterColorForChangeableValues" />


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="2"
        custom:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="@+id/guideline2">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="100dp"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:onClick="toggleNote"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/note_off"
                android:textSize="13sp"
                android:visibility="visible"
                custom:icon="@drawable/write24"
                custom:iconSize="17dp" />

            <Button
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:onClick="displayHint"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/hint"
                android:textSize="13sp"
                android:visibility="visible"
                custom:icon="@drawable/lightbulb"
                custom:iconSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/erase"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:onClick="unsetCell"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/erase"
                android:textSize="13sp"
                android:visibility="visible"
                custom:icon="@drawable/eraser"
                custom:iconSize="17dp" />

            <Button
                android:id="@+id/undo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:onClick="undoLastStep"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/undo"
                android:textSize="13sp"
                android:visibility="visible"
                custom:icon="@drawable/ic_baseline_undo_24"
                custom:iconSize="17dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/sudokuBoard"
        custom:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/one"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/two"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/three"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/four"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/five"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="1.0"
        custom:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/six"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/seven"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/eight"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="btnPress"
            android:text="@string/nine"
            android:textSize="35sp"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_begin="350dp" />


</androidx.constraintlayout.widget.ConstraintLayout>